[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
homepage = "https://github.com/jimmycuadra/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/jimmycuadra/rust-etcd"
version = "0.6.0"

[dependencies]
futures = "0.1.14"
hyper = "0.11.1"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
tokio-core = "0.1.8"
tokio-timer = "0.1.2"
url = "1.5.1"

[dependencies.hyper-tls]
optional = true
version = "0.1.2"

[dependencies.native-tls]
optional = true
version = "0.1.4"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]
