[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
edition = "2018"
homepage = "https://github.com/jimmycuadra/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/jimmycuadra/rust-etcd"
version = "0.9.0"

[lib]
test = false

[dependencies]
futures = "0.1.25"
hyper = "0.12.13"
http = "0.1.13"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
tokio-core = "0.1.17"
tokio-timer = "0.2.7"
url = "1.7.1"
base64 = "0.10.0"
log = "0.4.6"

[dependencies.hyper-tls]
optional = true
version = "0.3.1"

[dependencies.native-tls]
optional = true
version = "0.2.2"

[features]
default = ["tls"]
tls = ["hyper-tls", "native-tls"]
